# mpv-2025

./: .gitignore
ue2-openmp/: CMakeLists.txt  REPORT.md  kMeansClustering.cpp  parallelMatrixVectorMultiplication.cpp  parallelTrapezoidalRule.cpp
ue3-mpi/: ue3-mpi.sln
ue3-mpi/ue3-mpi/: Report.md  ex1_telephone_game.cpp  ex2_hot_potato.cpp  ex3_1_parallel_matrix_multiplication.cpp  ex3_2_parallel_matrix_multiplication.cpp  ex4_nbody.cpp  ue3-mpi.vcxproj  ue3-mpi.vcxproj.filters
ue4-mpi/: Report.md  ex1_rock_paper_scissors.cpp  ex2_zombie_outbreak.cpp  ue4-mpi.sln  ue4-mpi.vcxproj  ue4-mpi.vcxproj.filters
